Change Project Name

--- a/[TEST]FMN/.project
+++ b/[TEST]FMN/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>[TEST]FMN</name>
+	<name>FMN</name>
 	<comment></comment>
 	<projects>
 	</projects>
